--- a/2_L-system.ipynb
+++ b/2_L-system.ipynb
@@ -511,45 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.3 Példa - egy ág kirajzolása"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import turtle\n",
-    "import importlib\n",
-    "importlib.reload(turtle)\n",
-    "\n",
-    "verem = []\n",
-    "\n",
-    "turtle.setposition(0,-100)\n",
-    "turtle.tracer(1,1)\n",
-    "turtle.left(90)\n",
-    "\n",
-    "turtle.forward(100)\n",
-    "verem.append(turtle.pos())\n",
-    "turtle.left(45)\n",
-    "turtle.forward(50)\n",
-    "elmentett_pozicio = verem.pop()\n",
-    "turtle.penup()\n",
-    "turtle.goto(elmentett_pozicio)\n",
-    "turtle.pendown()\n",
-    "turtle.right(45)\n",
-    "turtle.forward(100)\n",
-    "\n",
-    "turtle.done()\n",
-    "turtle.exitonclick()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.4 Példa - ágak kirzajzolása ciklussal"
+    "### 4.3 Példa - ágak kirzajzolása ciklussal"
    ]
   },
   {
@@ -622,23 +584,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7bf0b952c8394d6994335057f20e6964",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(height=800, width=500)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "import turtle\n",
-    "import importlib\n",
-    "importlib.reload(turtle)\n",
+    "import ipyturtle3 as t\n",
+    "from ipyturtle3 import hold_canvas\n",
     "\n",
-    "def turtle_start():\n",
-    "    turtle.screensize(canvwidth=1000, canvheight=800, bg = \"#C7E2E7\") \n",
-    "    turtle.hideturtle() \n",
-    "    turtle.penup()   \n",
-    "    turtle.setposition(0,-250)\n",
-    "    turtle.left(90) \n",
-    "    turtle.pendown()\n",
-    "    turtle.speed(\"fastest\")\n",
-    "    turtle.tracer(2) #állítja a rajzolási sebességet 0 - azonnali, 1 - lassú, 2 - gyors\n",
+    "canvas = t.Canvas(width=500, height=800) \n",
+    "display(canvas)\n",
+    "myTS=t.TurtleScreen(canvas)\n",
+    "myTS.clear()\n",
+    "myTS.bgcolor(\"white\")\n",
+    "draw = t.Turtle(myTS)\n",
+    "draw.hideturtle() \n",
+    "draw.penup()   \n",
+    "draw.setposition(0,-250)\n",
+    "draw.left(90) \n",
+    "draw.pendown()        \n",
     "\n",
     "def general_noveny(axiom, iteraciok):    \n",
     "    aktualis_kifejezes = axiom\n",
@@ -656,28 +634,25 @@
     "    return aktualis_kifejezes  \n",
     "\n",
     "def rajzol_noveny(kifejezes, szog, lepes_hossz):\n",
-    "    verem = []\n",
-    "    turtle.speed(0)  \n",
+    "    verem = []    \n",
     "    for szimbolum in kifejezes:\n",
     "        if szimbolum == 'F':\n",
-    "            turtle.forward(lepes_hossz)\n",
+    "            draw.forward(lepes_hossz)\n",
     "        elif szimbolum == '+':\n",
-    "            turtle.left(szog)\n",
+    "            draw.left(szog)\n",
     "        elif szimbolum == '-':\n",
-    "            turtle.right(szog)\n",
+    "            draw.right(szog)\n",
     "        elif szimbolum == '[':\n",
-    "            verem.append((turtle.pos(), turtle.heading()))\n",
+    "            verem.append((draw.pos(), draw.heading()))\n",
     "        elif szimbolum == ']':\n",
     "            pozicio, szog_irany = verem.pop()\n",
-    "            turtle.penup()            \n",
-    "            turtle.goto(pozicio)\n",
-    "            turtle.pendown()\n",
-    "            turtle.setheading(szog_irany)            \n",
+    "            draw.penup()            \n",
+    "            draw.goto(pozicio)\n",
+    "            draw.pendown()\n",
+    "            draw.setheading(szog_irany)            \n",
     "\n",
-    "turtle_start()\n",
     "final_sentence = general_noveny('X', 5)\n",
-    "rajzol_noveny(final_sentence, 25, 3)\n",
-    "turtle.exitonclick()  "
+    "rajzol_noveny(final_sentence, 25, 3)"
    ]
   },
   {
@@ -737,6 +712,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipyturtle3 as turtle"
+   ]
   }
  ],
  "metadata": {
