--- a/1_web_scraping.ipynb
+++ b/1_web_scraping.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Adatbányászat - Web scraping\n",
     "\n",
-    "Adatok és információk weboldalakról kinyerésével foglalkozik."
+    "Adatok és információk internetről, esetünkben weboldalakról, történő kinyerésével foglalkozik."
    ]
   },
   {
@@ -46,7 +46,7 @@
    "id": "c0d6ed2a",
    "metadata": {},
    "source": [
-    "## 1. Mintafeladat\n",
+    "## 1. Feladat - Bevezetés\n",
     "\n",
     "https://www.scrapethissite.com/pages/simple/ weboldalról gyűjtsük ki az adatokat.\n",
     "\n",
@@ -300,7 +300,7 @@
    "id": "b816469d",
    "metadata": {},
    "source": [
-    "## 2. Kiválasztott weboldal elérése\n",
+    "## 2. feladat - Adatok gyűjtése Wikipédiáról\n",
     "\n",
     "200-as kód sikeres lekérést jelöl"
    ]
