--- a/test.ipynb
+++ b/test.ipynb
@@ -880,7 +880,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sbs\n",
     "import plotly.express as px\n",
-    "\n",
+    "from plotly.offline import plot, iplot, init_notebook_mode\n",
     "\n",
     "df = pd.read_csv(\"countries.csv\")\n",
     "\n",
