--- a/3_visualization.ipynb
+++ b/3_visualization.ipynb
@@ -4624,7 +4624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fadiagram\n",
+    "## Treemap diagramtípus\n",
     "\n",
     "Gyűjtsük ki kontinensenként az 5 legnagyobb területű országot és ábrázoljuk fadiagrammal."
    ]
