--- a/1_web_scraping.ipynb
+++ b/1_web_scraping.ipynb
@@ -5,7 +5,7 @@
    "id": "28f3543e-d824-4839-ba94-09f4c23e7164",
    "metadata": {},
    "source": [
-    "# Adatbányászat - Web scraping\n",
+    "# Adatbányászat (Web scraping) - minta\n",
     "\n",
     "Adatok és információk weboldalakról kinyerésével foglalkozik."
    ]
