--- a/3_visualization.ipynb
+++ b/3_visualization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adatvizualizáció\n",
+    "# Adatvizualizáció (Data visualization) - minta\n",
     "\n",
     "- Mi az adatvizualizáció szerepe?\n",
     "- Mire van szükség vizualizáció készítéséhez?\n",
