--- a/4_generative.ipynb
+++ b/4_generative.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Véletlen méretű és pozíciójú körök halmozása\n",
+    "# Generatív képalkotás (Generative art) - minta\n",
     "\n",
     "Helyezzünk el egy vásznon köröket úgy, hogy azok ne metsszék egymást."
    ]
