--- a/2_L-system.ipynb
+++ b/2_L-system.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Az L-rendszer"
+    "# L-rendszerek (L-systems) - minta"
    ]
   },
   {
